--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - _libgcc_mutex=0.1=main
   - _tflow_select=2.1.0=gpu
   - absl-py=0.7.1=py27_0
+  - asn1crypto=1.4.0=py_0
   - astor=0.7.1=py27_0
   - backports=1.0=py27_1
   - backports.shutil_get_terminal_size=1.0.0=py27_2
@@ -14,15 +15,19 @@ dependencies:
   - backports_abc=0.5=py27_0
   - blas=1.0=mkl
   - c-ares=1.15.0=h7b6447c_1
-  - ca-certificates=2020.6.24=0
+  - ca-certificates=2020.10.14=0
   - cairo=1.14.8=0
   - certifi=2019.11.28=py27_0
+  - cffi=1.13.2=py27h2e261b9_0
+  - chardet=3.0.4=py27_1003
+  - cryptography=2.3.1=py27hc365091_0
   - cuda80=1.0=0
   - cudatoolkit=10.0.130=0
   - cudnn=7.3.1=cuda10.0_0
   - cupti=10.0.130=0
   - cycler=0.10.0=py27_0
   - dbus=1.13.6=h746ee38_0
+  - decorator=4.1.2=py27_0
   - enum34=1.1.6=py27_1
   - expat=2.2.6=he6710b0_0
   - fontconfig=2.12.1=3
@@ -38,7 +43,9 @@ dependencies:
   - h5py=2.9.0=py27h7918eee_0
   - hdf5=1.10.4=hb1b8bf9_0
   - icu=54.1=0
+  - idna=2.10=py_0
   - intel-openmp=2019.3=199
+  - ipaddress=1.0.23=py_0
   - ipykernel=4.10.0=py27_0
   - ipython=5.8.0=py27_0
   - ipython_genutils=0.2.0=py27_0
@@ -69,6 +76,7 @@ dependencies:
   - mkl_random=1.0.1=py27h4414c95_1
   - mock=2.0.0=py27_0
   - ncurses=6.1=he6710b0_1
+  - numpy=1.14.2=py27hdbf6ddf_1
   - numpy-base=1.15.0=py27h1793315_0
   - openssl=1.0.2u=h7b6447c_0
   - pathlib2=2.3.5=py27_0
@@ -83,15 +91,20 @@ dependencies:
   - protobuf=3.6.1=py27he6710b0_0
   - ptyprocess=0.6.0=py27_0
   - pycairo=1.13.3=py27hea6d626_0
+  - pycparser=2.20=py_2
   - pygments=2.5.2=py_0
+  - pyopenssl=19.0.0=py27_0
   - pyparsing=2.4.0=py_0
   - pyqt=5.6.0=py27h22d08a2_6
+  - pysocks=1.7.1=py27_0
   - python=2.7.15=h77bded6_2
   - python-dateutil=2.8.0=py27_0
   - pytz=2019.1=py_0
   - pyyaml=5.2=py27h7b6447c_0
+  - pyzmq=18.1.0=py27he6710b0_0
   - qt=5.6.2=2
   - readline=7.0=h7b6447c_5
+  - requests=2.24.0=py_0
   - scandir=1.10.0=py27h7b6447c_0
   - scikit-learn=0.20.1=py27h4989274_0
   - scipy=1.1.0=py27hd20e5f9_0
@@ -115,6 +128,7 @@ dependencies:
   - traceback2=1.4.0=py27_0
   - traitlets=4.3.3=py27_0
   - unittest2=1.1.0=py27_0
+  - urllib3=1.25.7=py27_0
   - wcwidth=0.2.5=py_0
   - werkzeug=0.15.2=py_0
   - wheel=0.33.1=py27_0
@@ -122,48 +136,5 @@ dependencies:
   - yaml=0.1.7=had09818_2
   - zeromq=4.3.2=he6710b0_2
   - zlib=1.2.11=h7b6447c_3
-  - pip:
-    - astroid==1.6.6
-    - backports-functools-lru-cache==1.6.1
-    - blessings==1.7
-    - cloudpickle==0.8.1
-    - configparser==4.0.2
-    - dask==1.2.1
-    - decorator==4.4.0
-    - gpustat==0.6.0
-    - idna==2.7
-    - imageio==2.4.1
-    - imgaug==0.4.0
-    - isort==4.3.21
-    - lazy-object-proxy==1.5.1
-    - lxml==4.2.6
-    - matplotlib==2.2.5
-    - mccabe==0.6.1
-    - msgpack==1.0.0
-    - msgpack-numpy==0.4.4.3
-    - networkx==2.2
-    - numpy==1.15.4
-    - nvidia-ml-py==375.53.1
-    - opencv-python==4.1.0.25
-    - pillow==6.0.0
-    - progressbar2==3.38.0
-    - psutil==5.6.3
-    - pyexiftool==0.1.1
-    - pylint==1.9.5
-    - python-utils==2.4.0
-    - pywavelets==1.0.3
-    - pyzmq==18.1.1
-    - requests==2.19.1
-    - scikit-image==0.14.2
-    - shapely==1.7.0
-    - tabulate==0.8.6
-    - tensorlayer==1.11.0
-    - tensorpack==0.9.8
-    - toolz==0.9.0
-    - tqdm==4.27.0
-    - ujson==1.35
-    - urllib3==1.23
-    - wrapt==1.10.11
-    - youtube-dl==2020.1.24
-prefix: /home/chenyang/anaconda3/envs/tensorflow
+prefix: /home/chenyang/anaconda3/envs/deep-video-prior
 
